# ZeroTrust

./: README.md  docker-compose.yml
proxy/: .env  Dockerfile  makefile  pyproject.toml
proxy/app/: main.py
proxy/app/common/: config.py
proxy/app/database/: sqlite.py
proxy/app/keycloak/: client.py
proxy/app/middleware/: auth.py  authenticate.py  authorize.py  logging.py  risk_decision.py
proxy/app/opa/: client.py
proxy/app/opa/policies/: api.rego
proxy/app/router/: proxy.py
proxy/app/utils/: __init__.py  index.py
proxy/data/: last_seen.db-shm  last_seen.db-wal
upstream_admin/: admin.php
upstream_admin/data/: config.json  txs.json
upstream_admin/public/css/: style.css
upstream_admin/templates/: footer.php  header.php
upstream_private/: accounts.php  api.php  dashboard.php  lib.php  transactions.php  transfer.php
upstream_public/: about.php  api.php  contact.php  index.php
upstream_public/data/: contact_log.json
upstream_public/public/assets/: NOTICE.txt
upstream_server/: data.php
upstream_server/data/: accounts.json  txs.json
